# Theory-of-Computing

./: CMakeLists.txt  README.md
1.1/: DEFINITIONS.txt  concatenation_of_strings.c  finite_automata.c  length_of_string.c  reverse_string.c
